# mpn

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
src/mpn/: __main__.py  python_help.py
src/pman/: __main__.py  pman.py  python_help.py
