[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pman"
dynamic = ["version"]
description = 'A man-like command for showing help for Python objects.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "pman"
]
authors = [
  { name = "Md Sujauddin Sekh" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Documentation",
  "Topic :: Utilities",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/sujaudd1n/pman#readme"
Issues = "https://github.com/sujaudd1n/pman/issues"
Source = "https://github.com/sujaudd1n/pman"

[project.scripts]
pman = "pman.python_help:show_python_help"

[tool.hatch.version]
path = "src/pman/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pman tests}"

[tool.coverage.run]
source_pkgs = ["pman", "tests"]
branch = true
parallel = true
omit = [
  "src/pman/__about__.py",
]

[tool.coverage.paths]
pman = ["src/pman", "*/pman/src/pman"]
tests = ["tests", "*/pman/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
